--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,12 @@ src="https://www.facebook.com/tr?id=1591788591069782&ev=PageView&noscript=1"
 <!--!esi:include src="/esi?SiteID=msmea&StyleID=40010500&StyleVersion=4&styleIncludeFile=meta.html"-->
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
 <!--!/esi:include -->
+
+
+<!--DK-->
+<link rel="stylesheet" href="css/libs.min.css">
+<link rel="stylesheet" href="css/main.css">
+
 <link rel="stylesheet" href="https://dri1.img.digitalrivercontent.net/store?Action=DisplayContentManagerStyleSheet&amp;SiteID=msmea&amp;StyleID=40010500&amp;StyleVersion=4&amp;styleIncludeFile=style.css" type="text/css" media="all">
 <iframe style="width: 0px; height: 0px; border: 0px none;" title="" src="javascript:false"></iframe><script>
 (function(url){
